# gnome-web-apps

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  install-browsers.sh
.github/workflows/: release-build.sh  release-deps.sh  release.sh  release.yml
assets/: WebApp-test.desktop  app-description.markup  app-description.txt  app.desktop  app.metainfo.xml
assets/browsers/: brave.yml  chromium.yml
assets/config/browsers/: brave.yml  chrome.yml  chromium.yml  firefox.yml  floorp.yml  ungoogled-chromium.yml  vivaldi.yml  zen.yml
assets/config/desktop-files/: brave.desktop  chrome.desktop  firefox.desktop  vivaldi.desktop
assets/config/profiles/firefox/: user.js
assets/config/profiles/firefox/chrome/: userChrome.css
assets/config/profiles/zen/: user.js
assets/desktop/: org.pvermeer.GnomeWebApps.desktop  org.pvermeer.WebAppHub.desktop  org.pvermeer.WebAppHub.metainfo.xml  org.pvermeer.WebAppHub.yml  org.pvermeer.YetAnotherWebAppManager.desktop  org.pvermeer.YetAnotherWebAppManager.metadata.xml  org.pvermeer.YetAnotherWebAppManager.metainfo.xml
assets/desktop-files/: brave.desktop  chromium.desktop
dev-assets/desktop-files/: Youtube.desktop  com.brave.Browser.brave-gwa12345678.desktop  com.brave.Browser.brave-wah-12345678.desktop  com.brave.Browser.brave-yawam-12345678.desktop  com.brave.Browser.brave-yawam12345678.desktop  org.mozilla.firefox.firefox-wah-9zibqcxn.desktop  org.mozilla.firefox.firefox-yawam-9zibqcxn.desktop
flatpak/: build.sh  config.toml  flathub-exceptions.json  manifest.in  manifest.yml  org.pvermeer.WebAppHub.Devel.yml  org.pvermeer.WebAppHub.yml
src/: application.rs  config.rs  main.rs  services.rs
src/application/: browser_configs.rs  error_dialog.rs  fetch.rs  pages.rs  window.rs
src/application/pages/: browsers.rs  home.rs  main_page.rs  web_apps.rs  web_apps_page.rs
src/application/pages/web_apps/: web_app_view.rs
src/application/pages/web_apps/web_app_view/: icon_picker.rs
src/application/window/: view.rs
src/application/window/view/: app_menu.rs  sidebar_page.rs
src/ext/: desktop_entry.rs
src/services/: app_dirs.rs  assets.rs  browsers.rs  config.rs  desktop_file.rs  fetch.rs  utils.rs
test-assets/: WebApp-test.desktop
workspaces/app/: Cargo.toml  build.rs
workspaces/app/src/: application.rs  main.rs
workspaces/app/src/application/: error_dialog.rs  pages.rs  window.rs
workspaces/app/src/application/pages/: browsers.rs  home.rs  info.rs  web_apps.rs
workspaces/app/src/application/pages/info/: general.pango  permissions.pango
workspaces/app/src/application/pages/web_apps/: web_app_view.rs
workspaces/app/src/application/pages/web_apps/web_app_view/: icon_picker.rs
workspaces/app/src/application/pages/web_apps/web_app_view/icon_picker/: icon_fetcher.rs
workspaces/app/src/application/window/: view.rs
workspaces/app/src/application/window/view/: app_menu.rs  sidebar_page.rs
workspaces/common/: Cargo.toml  build.rs
workspaces/common/src/: app_dirs.rs  assets.rs  browsers.rs  config.rs  desktop_file.rs  fetch.rs  lib.rs  url.rs  utils.rs
workspaces/tools/: Cargo.toml  git-cliff.toml
workspaces/tools/src/: release.rs
