[package]
name = "gnome-web-apps"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
freedesktop-desktop-entry = "0"
gtk = { version = "*", features = ["v4_10"], package = "gtk4" }
include_dir = "0.7.4"
libadwaita = { version = "0", features = ["v1_7"] }
rand = "0.8"
regex = "1"
sanitize-filename = "0.6"
scraper = { version = "0", features = ["atomic"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"]}
ureq = { version = "3.1", features = ["gzip"] }
url = "2.5.7"
validator = "0"
